log
Mon, Apr 14, 2025 10:06:02 PM: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eeef3b7
Mon, Apr 14, 2025 11:17:21 PM: 
 hashmap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:48:13: error: implicit declaration of function 'isequal' [-Werror=implicit-function-declaration]
         if (isequal(map->buckets[index]->key, key));
             ^~~~~~~
cc1.exe: all warnings being treated as errors
0f5244f
Mon, Apr 14, 2025 11:18:25 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
4934fe2
Mon, Apr 14, 2025 11:21:55 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  8|3
total_score: 40/70
403935f
Mon, Apr 14, 2025 11:28:45 PM: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:95:12: error: statement with no effect [-Werror=unused-value]
         map->size;
         ~~~^~~~~~
cc1.exe: all warnings being treated as errors
69321d8
Mon, Apr 14, 2025 11:29:04 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
a8a3a8c
Mon, Apr 14, 2025 11:34:12 PM: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  16|1
total_score: 60/70
46ddf7c
Mon, Apr 14, 2025 11:40:00 PM: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:79:10: error: unused variable 'old_size' [-Werror=unused-variable]
     long old_size = map->size;
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
ef435ba
Mon, Apr 14, 2025 11:40:45 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  17|0
total_score: 70/70
0c4e03a
